--- a/best-practices/require-pod-requests-limits/require-pod-requests-limits.yaml
+++ b/best-practices/require-pod-requests-limits/require-pod-requests-limits.yaml
@@ -19,7 +19,7 @@ spec:
   validationFailureAction: Audit
   background: true
   rules:
-  - name: validate-container-resources
+  - name: validate-resources
     match:
       any:
       - resources:
