add bash shell to actions
Signed-off-by: Chandan-DK <chandan.dk@nirmata.com>

--- a/.github/actions/install-crds/action.yaml
+++ b/.github/actions/install-crds/action.yaml
@@ -4,6 +4,7 @@ runs:
   using: "composite"
   steps:
     - name: Install CRDs
+      shell: bash
       run: |
         set -e
         kubectl apply -f ./.chainsaw/crds
