Add InitContainers and EphermalContainers to Require Limits and Requests (#1103)
* updated require-pod-requests-limits.yaml

Signed-off-by: Nikhil Maheshwari nikhil.m2498@gmail.com
Signed-off-by: Nikhil Maheshwari <36232275+nikhilmaheshwari24@users.noreply.github.com>

* updated require-pod-requests-limits.yaml

Signed-off-by: Nikhil Maheshwari nikhil.m2498@gmail.com
Signed-off-by: Nikhil Maheshwari <36232275+nikhilmaheshwari24@users.noreply.github.com>

* Updated best-practices/require-pod-requests-limits/artifacthub-pkg.yml

Signed-off-by: Nikhil Maheshwari <36232275+nikhilmaheshwari24@users.noreply.github.com>

---------

Signed-off-by: Nikhil Maheshwari nikhil.m2498@gmail.com
Signed-off-by: Nikhil Maheshwari <36232275+nikhilmaheshwari24@users.noreply.github.com>
Co-authored-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require-pod-requests-limits/require-pod-requests-limits.yaml
+++ b/best-practices/require-pod-requests-limits/require-pod-requests-limits.yaml
@@ -16,7 +16,7 @@ metadata:
       This policy validates that all containers have something specified for memory and CPU
       requests and memory limits.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-resources
@@ -26,10 +26,24 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "CPU and memory resource requests and limits are required."
+      message: "CPU and memory resource requests and memory limits are required for containers."
       pattern:
         spec:
           containers:
+          - resources:
+              requests:
+                memory: "?*"
+                cpu: "?*"
+              limits:
+                memory: "?*"
+          =(initContainers):
+          - resources:
+              requests:
+                memory: "?*"
+                cpu: "?*"
+              limits:
+                memory: "?*"
+          =(ephemeralContainers):
           - resources:
               requests:
                 memory: "?*"
