--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,9 +57,12 @@ jobs:
           - ^pod-security$
           - ^psa$
           - ^psp-migration$
+          - ^psp-migration-cel$
           - ^tekton$
+          - ^tekton-cel$
           - ^traefik$
           - ^velero$
+          - ^velero-cel$
     runs-on: ubuntu-latest
     name: ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
     steps:
