Updated the policy file name in the chainsaw-test.yaml
Signed-off-by: nsagark <sagar@nirmata.com>

--- a/other/get-debug-information/.chainsaw-test/chainsaw-test.yaml
+++ b/other/get-debug-information/.chainsaw-test/chainsaw-test.yaml
@@ -24,7 +24,7 @@ spec:
   - name: step-02
     try: 
     - apply:
-        file: ../generate-policy.yaml    
+        file: ../collect-debug-information.yaml
     - assert:
         file: policy-ready.yaml
   - name: step-03
