--- a/pod-security-cel/baseline/disallow-host-process/disallow-host-process.yaml
+++ b/pod-security-cel/baseline/disallow-host-process/disallow-host-process.yaml
@@ -29,32 +29,18 @@ spec:
             - UPDATE
       validate:
         cel:
+          variables:
+            - name: allContainers
+              expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
           expressions:
-            - expression: >- 
-                object.spec.containers.all(container, !has(container.securityContext) ||
+            - expression: >-
+                variables.allContainers.all(container,
+                !has(container.securityContext) ||
                 !has(container.securityContext.windowsOptions) ||
                 !has(container.securityContext.windowsOptions.hostProcess) ||
                 container.securityContext.windowsOptions.hostProcess == false)
               message: >-
-                HostProcess containers are disallowed. The field spec.containers[*].securityContext.windowsOptions.hostProcess
-                must either be undefined or set to `false`.
-
-            - expression: >- 
-                !has(object.spec.initContainers) ||
-                object.spec.initContainers.all(container, !has(container.securityContext) ||
-                !has(container.securityContext.windowsOptions) ||
-                !has(container.securityContext.windowsOptions.hostProcess) ||
-                container.securityContext.windowsOptions.hostProcess == false)
-              message: >-
-                HostProcess containers are disallowed. The field spec.initContainers[*].securityContext.windowsOptions.hostProcess
-                must either be undefined or set to `false`.
-
-            - expression: >- 
-                !has(object.spec.ephemeralContainers) ||
-                object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
-                !has(container.securityContext.windowsOptions) ||
-                !has(container.securityContext.windowsOptions.hostProcess) ||
-                container.securityContext.windowsOptions.hostProcess == false)
-              message: >-
-                HostProcess containers are disallowed. The field spec.ephemeralContainers[*].securityContext.windowsOptions.hostProcess
-                must either be undefined or set to `false`.
+                HostProcess containers are disallowed. The field spec.containers[*].securityContext.windowsOptions.hostProcess,
+                spec.initContainers[*].securityContext.windowsOptions.hostProcess, and
+                spec.ephemeralContainers[*].securityContext.windowsOptions.hostProcess
+                must either be undefined or set to `false`.    
