--- a/other/check-hpa-exists/check-hpa-exists.yaml
+++ b/other/check-hpa-exists/check-hpa-exists.yaml
@@ -9,7 +9,7 @@ metadata:
     kyverno.io/kyverno-version: 1.11.0
     policies.kyverno.io/minversion: 1.9.0
     kyverno.io/kubernetes-version: "1.28"
-    policies.kyverno.io/subject: Deployment
+    policies.kyverno.io/subject: Deployment,ReplicaSet,StatefulSet,DaemonSet
     policies.kyverno.io/description: >-
       This policy ensures that Deployments, ReplicaSets, StatefulSets, and DaemonSets are only allowed
       if they have a corresponding Horizontal Pod Autoscaler (HPA) configured in the same namespace.
