fix match block
Signed-off-by: Boris 'B' Kurktchiev <boris.kurktchiev@nirmata.com>

--- a/other/restrict-clusteradmin-rolebindings-gcp-2024-003/restrict-clusteradmin-rolebindings-gcp-2024-003.yaml
+++ b/other/restrict-clusteradmin-rolebindings-gcp-2024-003/restrict-clusteradmin-rolebindings-gcp-2024-003.yaml
@@ -18,10 +18,11 @@ spec:
   rules:
   - name: validate-restricted-cluster-admin-bindings
     match:
-      resources:
-        kinds:
-        - ClusterRoleBinding
-        - RoleBinding
+      any:
+        - resources:
+          kinds:
+            - ClusterRoleBinding
+            - RoleBinding
     validate:
       message: "Binding ClusterRole 'cluster-admin' is restricted, system:authenticated, system:unauthenticated and system:anonymous are not allowed. GCP-2024-003"
       deny:
