--- a/best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-latest-success-first.yaml
+++ b/best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-latest-success-first.yaml
@@ -8,3 +8,8 @@ spec:
     image: nginx:1.35
   - name: busybox
     image: busybox:latest
+  initContainers:
+  - name: nginx
+    image: nginx:1.35
+  - name: busybox
+    image: busybox:latest
