--- a/best-practices/disallow-helm-tiller/.chainsaw-test/bad-deploy.yaml
+++ b/best-practices/disallow-helm-tiller/.chainsaw-test/bad-deploy.yaml
@@ -19,3 +19,8 @@ spec:
         name: busybox
       - image: docker.io/tiller:latest
         name: helm-tiller
+      initContainers:
+      - image: busybox
+        name: busybox
+      - image: docker.io/tiller:latest
+        name: helm-tiller
