--- a/best-practices/disallow-helm-tiller/.chainsaw-test/bad-pod.yaml
+++ b/best-practices/disallow-helm-tiller/.chainsaw-test/bad-pod.yaml
@@ -6,3 +6,6 @@ spec:
   containers:
   - name: helm-tiller
     image: docker.io/tiller:latest
+  initContainers:
+  - name: helm-tiller
+    image: docker.io/tiller:latest
