--- a/best-practices/disallow-helm-tiller/.chainsaw-test/bad-pod-success-first.yaml
+++ b/best-practices/disallow-helm-tiller/.chainsaw-test/bad-pod-success-first.yaml
@@ -8,3 +8,8 @@ spec:
     image: busybox:1.35
   - name: helm-tiller
     image: docker.io/tiller:latest
+  initContainers:
+  - name: somebox
+    image: busybox:1.35
+  - name: helm-tiller
+    image: docker.io/tiller:latest
