--- a/best-practices/disallow-helm-tiller/.chainsaw-test/good-deploy.yaml
+++ b/best-practices/disallow-helm-tiller/.chainsaw-test/good-deploy.yaml
@@ -18,3 +18,7 @@ spec:
       - image: busybox:v1.35
         name: busybox
         command: ["sleep", "3600"]
+      initContainers:
+      - image: busybox:v1.35
+        name: busybox
+        command: ["sleep", "3600"]
