--- a/best-practices/disallow-latest-tag/disallow-latest-tag.yaml
+++ b/best-practices/disallow-latest-tag/disallow-latest-tag.yaml
@@ -26,7 +26,7 @@ spec:
     validate:
       message: "An image tag is required."
       foreach:
-        - list: "request.object.spec.initContainers"
+        - list: "request.object.spec.containers"
           pattern:
             image: "*:*"
         - list: "request.object.spec.initContainers"
@@ -44,7 +44,7 @@ spec:
     validate:
       message: "Using a mutable image tag e.g. 'latest' is not allowed."
       foreach:
-        - list: "request.object.spec.initContainers"
+        - list: "request.object.spec.containers"
           pattern:
             image: "!*:latest"
         - list: "request.object.spec.initContainers"
