--- a/istio/create-authorizationpolicy/.chainsaw-test/permissions.yaml
+++ b/istio/create-authorizationpolicy/.chainsaw-test/permissions.yaml
@@ -1,32 +1,33 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: kyverno:nodes:view
+  name: kyverno:istio:auth:view
   labels:
-    rbac.kyverno.io/aggregate-to-background-controller: "true"
+    rbac.kyverno.io/aggregate-to-reports-controller: "true"
     rbac.kyverno.io/aggregate-to-admission-controller: "true"
-    rbac.kyverno.io/aggregate-to-reports-controller: "true"    
+    rbac.kyverno.io/aggregate-to-background-controller: "true"
 rules:
 - apiGroups:
-  - ""
+  - 'security.istio.io'
   resources:
-  - nodes
+  - authorizationpolicies
   verbs:
   - get
   - list
   - watch
-  - update
 --- 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: kyverno:nodes:update
+  name: kyverno:istio:auth:edit
   labels:
     rbac.kyverno.io/aggregate-to-background-controller: "true"
 rules:
 - apiGroups:
-  - ""
+  - 'security.istio.io'
   resources:
-  - nodes
+  - authorizationpolicies
   verbs:
+  - create
   - update
+  - delete
