--- a/kasten/kasten-generate-policy-by-preset-label/.chainsaw-test/chainsaw-test.yaml
+++ b/kasten/kasten-generate-policy-by-preset-label/.chainsaw-test/chainsaw-test.yaml
@@ -8,6 +8,8 @@ spec:
   steps:
   - name: step-01
     try:
+    - apply: 
+        file: permissions.yaml
     - apply:
         file: chainsaw-step-01-apply-1.yaml
     - assert:
