--- a/linkerd/check-linkerd-authorizationpolicy/.chainsaw-test/chainsaw-test.yaml
+++ b/linkerd/check-linkerd-authorizationpolicy/.chainsaw-test/chainsaw-test.yaml
@@ -17,6 +17,8 @@ spec:
   - name: step-01
     try:
     - apply:
+        file: permissions.yaml
+    - apply:
         file: ../check-linkerd-authorizationpolicy.yaml
     - patch:
         resource:
