--- a/linkerd/require-linkerd-server/.chainsaw-test/chainsaw-test.yaml
+++ b/linkerd/require-linkerd-server/.chainsaw-test/chainsaw-test.yaml
@@ -13,6 +13,8 @@ spec:
   - name: step-01
     try:
     - apply:
+        file: permissions.yaml
+    - apply:
         file: ../require-linkerd-server.yaml
     - patch:
         resource:
