--- a/other/restrict-secrets-by-label/.chainsaw-test/chainsaw-test.yaml
+++ b/other/restrict-secrets-by-label/.chainsaw-test/chainsaw-test.yaml
@@ -9,6 +9,8 @@ spec:
   - name: step-01
     try:
     - apply:
+        file: permissions.yaml
+    - apply:
         file: secret.yaml
     - apply:
         file: ../restrict-secrets-by-label.yaml
