--- a/other/restrict-secrets-by-label/.chainsaw-test/permissions.yaml
+++ b/other/restrict-secrets-by-label/.chainsaw-test/permissions.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: kyverno:nodes:view
+  name: kyverno:secrets:view
   labels:
     rbac.kyverno.io/aggregate-to-background-controller: "true"
     rbac.kyverno.io/aggregate-to-admission-controller: "true"
@@ -10,23 +10,8 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - nodes
+  - secrets
   verbs:
   - get
   - list
   - watch
-  - update
---- 
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: kyverno:nodes:update
-  labels:
-    rbac.kyverno.io/aggregate-to-background-controller: "true"
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - nodes
-  verbs:
-  - update
