--- a/other/sync-secrets/.chainsaw-test/chainsaw-test.yaml
+++ b/other/sync-secrets/.chainsaw-test/chainsaw-test.yaml
@@ -9,6 +9,8 @@ spec:
   - name: step-01
     try:
     - apply:
+        file: permissions.yaml
+    - apply:
         file: ../sync-secrets.yaml
     - assert:
         file: policy-ready.yaml
