--- a/other/get-debug-information/collect-debug-information.yaml
+++ b/other/get-debug-information/collect-debug-information.yaml
@@ -10,7 +10,7 @@ metadata:
     kyverno.io/kyverno-version: 1.11.5
     kyverno.io/kubernetes-version: "1.27"
     policies.kyverno.io/description: >-
-      This policy generates a job which gathers troubleshooting data (including logs, kubectl describe output and events from the namespace) from pods that are in CrashLoopBackOff and have 3 restarts. This data can further be used to automatically create a Jira issue using some kind of automation or another Kyverno policy. For more information on the image used in this policy, see https://github.com/nirmata/SRE-Operational-Usecases/tree/main/get-troubleshooting-data/get-debug-data. 
+      This policy generates a job which gathers troubleshooting data (including logs, kubectl describe output and events from the namespace) from pods that are in CrashLoopBackOff and have 3 restarts. This data can further be used to automatically create a Jira issue using some kind of automation or another Kyverno policy. For more information on the image used in this policy in addition to the necessary RBAC resources required in order for this policy to operate, see the documentation at https://github.com/nirmata/SRE-Operational-Usecases/tree/main/get-troubleshooting-data/get-debug-data. 
 spec:
   rules:
   - name: get-debug-data-policy-rule
