Updated the digest and also the policy to add serviceaccount information
Signed-off-by: nsagark <sagar@nirmata.com>

--- a/other/get-debug-information/collect-debug-information.yaml
+++ b/other/get-debug-information/collect-debug-information.yaml
@@ -67,6 +67,7 @@ spec:
                 - "/app/get-debug-jira-v2.sh"
                 - "{{request.namespace}}"
                 - "{{request.object.metadata.name}}"
+              serviceAccount: default # This serviceaccount needs the necessary RBAC in order for the policy to operate. 
               volumes:
               - name: token
                 projected:
