--- a/other/mutate-pod-binding/.chainsaw-test/crb.yaml
+++ b/other/mutate-pod-binding/.chainsaw-test/crb.yaml
@@ -3,6 +3,9 @@ kind: ClusterRole
 metadata:
   name: kyverno:nodes:view
   labels:
+    app.kubernetes.io/component: background-controller
+    app.kubernetes.io/instance: kyverno
+    app.kubernetes.io/part-of: kyverno
     rbac.kyverno.io/aggregate-to-background-controller: "true"
     rbac.kyverno.io/aggregate-to-admission-controller: "true"
     rbac.kyverno.io/aggregate-to-reports-controller: "true"    
@@ -22,6 +25,9 @@ kind: ClusterRole
 metadata:
   name: kyverno:nodes:update
   labels:
+    app.kubernetes.io/component: background-controller
+    app.kubernetes.io/instance: kyverno
+    app.kubernetes.io/part-of: kyverno
     rbac.kyverno.io/aggregate-to-background-controller: "true"
 rules:
 - apiGroups:
