--- a/pod-security-cel/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
+++ b/pod-security-cel/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
@@ -33,4 +33,4 @@ spec:
               expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
           expressions:
             - expression: "variables.allContainers.all(container, container.?securityContext.?privileged.orValue(false) == false)"
-              message: "Privileged mode is disallowed."
+              message: "Privileged mode is disallowed. All containers must set the securityContext.privileged field to `false` or unset the field."
