--- a/other/deny-default-service-account-bindings/deny-default-service-account-bindings.yaml
+++ b/other/deny-default-service-account-bindings/deny-default-service-account-bindings.yaml
@@ -14,7 +14,7 @@ metadata:
       explicitly overridden. If this account is bound to a Role or ClusterRole that grants extensive 
       permissions, every pod in the namespace using the default service account will inherit these 
       permissions. This setup can lead to unnecessary security risks if a pod is compromised, as an 
-      attacker could potentially gain access to other resources within the cluster.For an enhnaced 
+      attacker could potentially gain access to other resources within the cluster. For enhanced 
       security, using the default service account in RoleBindings is not recommended.
 spec:
   validationFailureAction: enforce
