--- a/other/deny-default-service-accounts/deny-default-service-accounts.yaml
+++ b/other/deny-default-service-accounts/deny-default-service-accounts.yaml
@@ -27,4 +27,4 @@ spec:
       message: "Default service accounts are not allowed to be used."
       pattern:
         spec:
-          serviceAccountName: "!default"
+          (serviceAccountName): "!default"
