--- a/other/deny-default-service-accounts/deny-default-service-accounts.yaml
+++ b/other/deny-default-service-accounts/deny-default-service-accounts.yaml
@@ -13,7 +13,7 @@ metadata:
       For an enhnaced security posture, it is recommended to use specific service accounts
       and not the default service accounts. These service accounts provide an identity for
       processes that run in individual Pods and map them to a ServiceAccount object. 
-      This policy flags the Pods that use any default service accounts.
+      This policy prevents use of the default service account in Pods.
 spec:
   validationFailureAction: audit
   background: false
