--- a/pod-security/subrule/restricted/restricted-exclude-capabilities/restricted-exclude-capabilities.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-capabilities/restricted-exclude-capabilities.yaml
@@ -35,5 +35,5 @@ spec:
         exclude:
         - controlName: Capabilities
           images:
-          - nginx*
+          - ghcr.io/kyverno/test-nginx*
           - redis*
