--- a/other/replace-image-registry/.chainsaw-test/pods.yaml
+++ b/other/replace-image-registry/.chainsaw-test/pods.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: ghcr.io/busybox:1.35
   - name: busybox02
     image: docker.io/busybox:1.35
 ---
