--- a/other/require-imagepullsecrets/.chainsaw-test/podcontroller-bad.yaml
+++ b/other/require-imagepullsecrets/.chainsaw-test/podcontroller-bad.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: busybox
-        image: ghcr.io/kyverno/test-busybox:1.35
+        image: docker.io/library/busybox:latest
       - name: nginx
         image: ghcr.io/kyverno/test-verify-image:unsigned
 ---
@@ -33,7 +33,7 @@ spec:
         spec:
           containers:
           - name: nginx
-            image: ghcr.io/kyverno/test-verify-image:unsigned
+            image: docker.io/library/busybox:latest
           - name: busybox
             image: ghcr.io/kyverno/test-busybox:1.35
           restartPolicy: OnFailure
