revert to DockerHub as a test
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/other/refresh-env-var-in-pod/.chainsaw-test/deployment.yaml
+++ b/other/refresh-env-var-in-pod/.chainsaw-test/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: busybox
     spec:
       containers:
-      - image: ghcr.io/kyverno/test-busybox:1.35
+      - image: busybox:1.35
         name: busybox
         command: ["sleep", "3600"]
         env:
@@ -46,7 +46,7 @@ spec:
         app: busybox
     spec:
       containers:
-      - image: ghcr.io/kyverno/test-busybox:1.35
+      - image: busybox:1.35
         name: busybox
         command: ["sleep", "3600"]
         env:
@@ -76,7 +76,7 @@ spec:
         app: busybox
     spec:
       containers:
-      - image: ghcr.io/kyverno/test-busybox:1.35
+      - image: busybox:1.35
         name: busybox
         command: ["sleep", "3600"]
         env:
