--- a/other/refresh-volumes-in-pods/.chainsaw-test/chainsaw-step-02-apply-3.yaml
+++ b/other/refresh-volumes-in-pods/.chainsaw-test/chainsaw-step-02-apply-3.yaml
@@ -10,5 +10,5 @@ spec:
   - command:
     - sleep
     - "3600"
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     name: busybox
