--- a/other/refresh-volumes-in-pods/.chainsaw-test/chainsaw-step-02-apply-4.yaml
+++ b/other/refresh-volumes-in-pods/.chainsaw-test/chainsaw-step-02-apply-4.yaml
@@ -10,7 +10,7 @@ spec:
   - command:
     - sleep
     - "3600"
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     name: busybox
     volumeMounts:
     - mountPath: /mnt/foo
