--- a/other/audit-event-on-exec/.chainsaw-test/chainsaw-test.yaml
+++ b/other/audit-event-on-exec/.chainsaw-test/chainsaw-test.yaml
@@ -22,6 +22,16 @@ spec:
         file: ns.yaml
     - apply:
         file: pod.yaml
+    - wait:
+        apiVersion: v1
+        kind: Pod
+        name: execevent-pod
+        namespace: exec-event-ns
+        timeout: 1m
+        for:
+          condition:
+            name: Ready
+            value: 'true'
   - name: step-03
     try:
     - sleep:
