revert to DockerHub images
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/other/audit-event-on-exec/.chainsaw-test/pod.yaml
+++ b/other/audit-event-on-exec/.chainsaw-test/pod.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: exec-event-ns
 spec:
   containers:
-    - image: ghcr.io/kyverno/test-busybox:1.35
+    - image: busybox:1.35
       name: busybox
       command: ["sleep","3600"]
