--- a/other/block-images-with-volumes/.chainsaw-test/podcontrollers-bad.yaml
+++ b/other/block-images-with-volumes/.chainsaw-test/podcontrollers-bad.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: busybox
-        image: ghcr.io/kyverno/test-busybox:1.35
+        image: busybox:1.35
       - name: busybox02
         image: clover/volume:passbolt
 ---
