--- a/other/block-pod-exec-by-namespace/.chainsaw-test/pods.yaml
+++ b/other/block-pod-exec-by-namespace/.chainsaw-test/pods.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     command: ["sleep", "300"]
 ---
 apiVersion: v1
@@ -17,8 +17,8 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     command: ["sleep", "300"]
   - name: busybox02
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     command: ["sleep", "300"]
