--- a/other/block-pod-exec-by-pod-and-container/.chainsaw-test/chainsaw-step-02-apply-3.yaml
+++ b/other/block-pod-exec-by-pod-and-container/.chainsaw-test/chainsaw-step-02-apply-3.yaml
@@ -8,5 +8,5 @@ spec:
   - command:
     - sleep
     - "300"
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     name: busybox
