--- a/other/block-pod-exec-by-pod-label/.chainsaw-test/pods.yaml
+++ b/other/block-pod-exec-by-pod-label/.chainsaw-test/pods.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     command: ["sleep", "300"]
 ---
 apiVersion: v1
@@ -19,7 +19,7 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     command: ["sleep", "300"]
 ---
 apiVersion: v1
@@ -33,7 +33,7 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     command: ["sleep", "300"]
 ---
 apiVersion: v1
@@ -47,5 +47,5 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: busybox:1.35
     command: ["sleep", "300"]
