fix images and perms
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/other/block-pod-exec-by-namespace-label/.chainsaw-test/podcontrollers.yaml
+++ b/other/block-pod-exec-by-namespace-label/.chainsaw-test/podcontrollers.yaml
@@ -44,10 +44,10 @@ spec:
     spec:
       containers:
       - name: bb
-        image: ghcr.io/kyverno/test-busybox:1.35
+        image: busybox:1.35
         command: ["sleep", "300"]
       - name: bb2
-        image: ghcr.io/kyverno/test-busybox:1.35
+        image: busybox:1.35
         command: ["sleep", "300"]
 ---
 apiVersion: apps/v1
@@ -70,10 +70,10 @@ spec:
     spec:
       containers:
       - name: bb
-        image: ghcr.io/kyverno/test-busybox:1.35
+        image: busybox:1.35
         command: ["sleep", "300"]
       - name: bb2
-        image: ghcr.io/kyverno/test-busybox:1.35
+        image: busybox:1.35
         command: ["sleep", "300"]
 ---
 apiVersion: apps/v1
@@ -96,8 +96,8 @@ spec:
     spec:
       containers:
       - name: bb
-        image: ghcr.io/kyverno/test-busybox:1.35
+        image: busybox:1.35
         command: ["sleep", "300"]
       - name: bb2
-        image: ghcr.io/kyverno/test-busybox:1.35
+        image: busybox:1.35
         command: ["sleep", "300"]
