--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 
+# to update the workflow jobs, run the script below from the repository root:
+# `(cd .hack/chainsaw-matrix && go run . > ../../.github/workflows/test.yml)`
+
 name: E2E Tests
 
 permissions: {}
