--- a/best-practices/require-ro-rootfs/require-ro-rootfs.yaml
+++ b/best-practices/require-ro-rootfs/require-ro-rootfs.yaml
@@ -26,8 +26,8 @@ spec:
           - Pod
     validate:
       message: "Root filesystem must be read-only."
-      pattern:
-        spec:
-          containers:
-          - securityContext:
-              readOnlyRootFilesystem: true
+      foreach:
+        - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
+          pattern:
+              securityContext:
+                readOnlyRootFilesystem: true
