feat: bump chainsaw
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/other/deployment-replicas-higher-than-pdb/.chainsaw-test/good-pdb.yaml
+++ b/other/deployment-replicas-higher-than-pdb/.chainsaw-test/good-pdb.yaml
@@ -33,7 +33,7 @@ kind: PodDisruptionBudget
 metadata:
   name: good-pdb04
 spec:
-  maxUnAvailable: 3
+  maxUnavailable: 3
   selector:
     matchLabels:
       app: busybox
