--- a/other/restrict-node-affinity/.chainsaw-test/pod-good.yaml
+++ b/other/restrict-node-affinity/.chainsaw-test/pod-good.yaml
@@ -14,14 +14,16 @@ metadata:
 spec:
   affinity:
     podAffinity:
-      prefferedDuringSchedulingIgnoredDuringExecution:
-      - labelSelector:
-          matchExpressions:
-          - key: bar
-            operator: In
-            values:
-            - bar
-        topologyKey: topology.kubernetes.io/zone
+      preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+            - key: bar
+              operator: In
+              values:
+              - bar
+          topologyKey: topology.kubernetes.io/zone
     podAntiAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
       - weight: 100
