--- a/other/restrict-ingress-host/.chainsaw-test/ingress-bad.yaml
+++ b/other/restrict-ingress-host/.chainsaw-test/ingress-bad.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   rules:
   - host: foo
-    https:
+    http:
       paths:
       - backend:
           service:
@@ -22,7 +22,7 @@ metadata:
 spec:
   rules:
   - host: foo-bar
-    https:
+    http:
       paths:
       - path: /testpath
         pathType: Prefix
@@ -32,7 +32,7 @@ spec:
             port:
               number: 80
   - host: bar-bar
-    https:
+    http:
       paths:
       - path: /testpath
         pathType: Prefix
