--- a/other/restrict-ingress-host/.chainsaw-test/ingress-updates-bad.yaml
+++ b/other/restrict-ingress-host/.chainsaw-test/ingress-updates-bad.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   rules:
   - host: endpoint02
-    https:
+    http:
       paths:
       - backend:
           service:
@@ -22,7 +22,7 @@ metadata:
 spec:
   rules:
   - host: endpoint01
-    https:
+    http:
       paths:
       - backend:
           service:
@@ -32,7 +32,7 @@ spec:
         path: /
         pathType: Prefix
   - host: endpoint02
-    https:
+    http:
       paths:
       - path: /testpath
         pathType: Prefix
