--- a/.github/workflows/cel-test.yml
+++ b/.github/workflows/cel-test.yml
@@ -3,10 +3,10 @@ name: E2E Tests - CEL
 permissions: {}
 
 on:
-  workflow_dispatch: {}
   pull_request:
     branches:
-      - 'main'
+      - main
+      - release-*
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
