--- a/other/require-base-image/.chainsaw-test/pod-good.yaml
+++ b/other/require-base-image/.chainsaw-test/pod-good.yaml
@@ -17,6 +17,8 @@ metadata:
   namespace: require-base-image-ns
 spec:
   containers:
+  - name: myapp
+    image: ghcr.io/samj1912/myapp:latest
   - name: kyverno
     image: ghcr.io/kyverno/kyverno:latest
 ---
