--- a/other/require-base-image/.chainsaw-test/podcontroller-good.yaml
+++ b/other/require-base-image/.chainsaw-test/podcontroller-good.yaml
@@ -32,8 +32,11 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
         spec:
           containers:
+          - name: myapp
+            image: ghcr.io/samj1912/myapp:latest
           - name: kyverno
             image: ghcr.io/kyverno/kyverno:latest
           restartPolicy: OnFailure
